force-app/main/default/objects/ccrz__E_Subscriber_Page__c/ccrz__E_Subscriber_Page__c.object-meta.xml
<CustomObject>
    <label>CC Subscriber Page</label>
    <nameField>
        <label>CC Subscriber Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Subscriber Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>