force-app/main/default/objects/ccrz__E_Subscriber_Page__c/fields/ccrz__LayoutTemplate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LayoutTemplate__c</fullName>
    <description>The OOTB layout template, for example cc_tmpl_OneColRD.  If not specified then cc_tmpl_OneColRD will be used.</description>
    <label>Layout Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>