force-app/main/default/objects/ccrz__E_Subscriber_Page__c/fields/ccrz__PageInclude__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageInclude__c</fullName>
    <defaultValue>&quot;cc_EmptyPage&quot;</defaultValue>
    <label>Page Include</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>