force-app/main/default/objects/ccrz__E_Subscriber_Page__c/fields/ccrz__PageKey__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageKey__c</fullName>
    <label>Page Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>