force-app/main/default/objects/ccrz__E_Subscriber_Page__c/fields/ccrz__SubscriberLayoutTemplate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubscriberLayoutTemplate__c</fullName>
    <description>If cc_tmpl_SubscriberTemplate is specified as the Layout Template then this should be the specific layout template that will be used.  Otherwise this field can be left blank.</description>
    <label>Subscriber Layout Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>