force-app/main/default/objects/ccrz__E_Subscriber_Page__c/fields/ccrz__TitleLabel__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TitleLabel__c</fullName>
    <description>The title label that the page will display</description>
    <label>Title Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>